Integrated User APIs & bug fixes